--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,7 +10,7 @@ on:
 jobs: # stages
   laravel-tests: # stage("laravel-tests") # stage name
 
-    runs-on: windows-latest # agent (Github: Runners)
+    runs-on: ubuntu-latest # agent (Github: Runners)
 
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
