--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,4 +33,6 @@ jobs: # stages
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: php artisan test
+      run: |
+        php artisan migrate
+        php artisan test
